fix menu button contrast

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -146,32 +146,18 @@ body {
 	width: 100%;
 	height: 60px;
 	z-index: 1;
+	display: flex;
+	flex-direction: row;
 }
 
-.header button {
-	position: absolute;
-	top: 50%;
-	left: 10px;
-	transform: translateY(-50%);
-	background-image: url('../img/menu.png');
-	background-repeat: no-repeat;
-	background-size: contain;
-	background-position: center;
-	background-color: transparent;
-	border: none;
-	width: 40px;
-	height: 40px;
-	outline: none;
+.react-icons {
+	width: 35px;
+	height: 35px;
+	margin-top: 14px;
 	cursor: pointer;
-	outline: none;
 }
-
-.header button.selected {
-	background-image: url('../img/menu-open.png');
-}
-
-.header button::-moz-focus-inner {
-	border: 0;
+.react-icons:hover {
+	filter: opacity(50%);
 }
 
 div.header h1 {
